<resources>
    <string name="app_name">ChatCraze</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="this_is_receive_message">This is receive message</string>
    <string name="this_is_sent_message">This is sent message</string>
</resources>